@@ -65,7 +65,7 @@ public class LocationSqlDAO implements LocationDAO {
         }
         st.close();
         if (!list.isEmpty()) {
-            return list.getFirst();
+            return list.get(0);
         }
         return null;
     }
